--- a/turing-lang.cabal
+++ b/turing-lang.cabal
@@ -6,7 +6,6 @@ license-file:       LICENSE
 author:             Javier Manotas Ruiz
 maintainer:         jmanotasruiz@gmail.com
 build-type:         Simple
-extra-doc-files:    CHANGELOG.md
 
 common warnings
     ghc-options: -Wall
@@ -14,8 +13,7 @@ common warnings
 executable turing-lang
     import:           warnings
     main-is:          Main.hs
-    other-modules:    TuringMachine, Tape, TMState, Parser
-    -- other-extensions:
-    build-depends:    containers ^>=0.6.7, base ^>=4.18.3.0, parsec ^>=3.1.16.1
+    other-modules:    TuringMachine, Tape, TMState, Parser, TMChecker
+    build-depends:    base ^>= 4.18.3.0, containers ^>= 0.6.7, parsec ^>= 3.1.16.1
     hs-source-dirs:   src
     default-language: Haskell2010
